--- a/pages/activity/detail-new/detail-new.wxss
+++ b/pages/activity/detail-new/detail-new.wxss
@@ -1,7 +1,8 @@
-.container {
-  background-color: #f5f5f5;
+.activity-detail-page {
   min-height: 100vh;
-  padding-bottom: 20rpx;
+  margin-top: 0;
+  position: relative;
+  z-index: 1;
 }
 
 /* 活动封面 */
@@ -9,6 +10,7 @@
   width: 100%;
   height: 400rpx;
   overflow: hidden;
+  position: relative;
 }
 
 .cover-image {
@@ -16,9 +18,20 @@
   height: 100%;
 }
 
+/* 白色背景内容区域 */
+.white-background-content {
+  background-color: #ffffff;
+  border-radius: 24rpx 24rpx 0 0;
+  margin-top: -30rpx;
+  position: relative;
+  z-index: 10;
+  padding-top: 20rpx;
+  min-height: 800rpx;
+  padding-bottom: 100rpx;
+}
+
 /* 活动标题 */
 .title-container {
-  background-color: #fff;
   padding: 24rpx;
   margin-bottom: 12rpx;
   position: relative;
@@ -46,7 +59,6 @@
 
 /* 主办方信息 */
 .organizer-container {
-  background-color: #fff;
   padding: 24rpx;
   margin-bottom: 12rpx;
   display: flex;
@@ -78,7 +90,6 @@
 
 /* 活动信息 */
 .info-section {
-  background-color: #fff;
   margin-bottom: 12rpx;
 }
 
@@ -128,7 +139,6 @@
 
 /* 活动图片 */
 .images-section {
-  background-color: #fff;
   padding: 24rpx;
   margin-bottom: 12rpx;
 }
@@ -161,7 +171,6 @@
 
 /* 活动详情 */
 .description-section {
-  background-color: #fff;
   padding: 24rpx;
   margin-bottom: 12rpx;
 }
@@ -172,8 +181,6 @@
   line-height: 40rpx;
   white-space: pre-wrap;
 }
-
-
 
 /* 加载中 */
 .loading-container {
