--- a/pages/profile/edit/edit.wxml
+++ b/pages/profile/edit/edit.wxml
@@ -30,7 +30,7 @@
       <view class="section-card card">
         <view class="section-title">基本信息</view>
         <view class="form-item">
-          <view class="label">昵称</view>
+          <view class="label label-required">昵称</view>
           <view class="input-wrapper">
             <input class="input" placeholder="请输入昵称" value="{{form.nickname}}" data-field="nickname" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
             <view class="save-btn" wx:if="{{editingField === 'nickname'}}" data-field="nickname" catchtap="handleSaveField">
@@ -39,7 +39,7 @@
           </view>
         </view>
         <view class="form-item">
-          <view class="label">真实姓名</view>
+          <view class="label label-required">真实姓名</view>
           <view class="input-wrapper">
             <input class="input" placeholder="请输入真实姓名" value="{{form.name}}" data-field="name" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
             <view class="save-btn" wx:if="{{editingField === 'name'}}" data-field="name" catchtap="handleSaveField">
@@ -60,9 +60,9 @@
           </picker>
         </view>
         <view class="form-item">
-          <view class="label">手机号</view>
+          <view class="label label-required">手机号</view>
           <view class="input-wrapper">
-            <input class="input" type="number" maxlength="11" placeholder="用于接收活动通知" value="{{form.phone}}" data-field="phone" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+            <input class="input" type="number" maxlength="11" placeholder="手机号码" value="{{form.phone}}" data-field="phone" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
             <view class="save-btn" wx:if="{{editingField === 'phone'}}" data-field="phone" catchtap="handleSaveField">
               <text class="save-icon">✓</text>
             </view>
@@ -150,7 +150,7 @@
       </view>
 
       <view class="section-card card">
-        <view class="section-title">学习经历</view>
+        <view class="section-title label-required">学习经历</view>
         <!-- 遮罩层，点击隐藏下拉列表 -->
         <view wx:if="{{hasSchoolDropdownVisible}}" class="school-dropdown-mask" catchtap="hideSchoolDropdown"></view>
         <view class="education-list">
