--- a/pages/activity/edit/edit.wxss
+++ b/pages/activity/edit/edit.wxss
@@ -1,18 +1,25 @@
 /* pages/activity/edit/edit.wxss */
+.publish-page-container {
+  background-color: transparent;
+  position: relative;
+  width: 750rpx;
+  min-height: calc(100vh - 190.22rpx);
+  display: flex;
+  flex-direction: column;
+}
+
 .publish-page {
   padding: 20rpx;
-  background: #f7f8fa;
-  min-height: 100vh;
   box-sizing: border-box;
   padding-bottom: 120rpx;
 }
 
 .form-card {
   background-color: #fff;
-  border-radius: 16rpx;
-  padding: 30rpx;
-  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.05);
-  margin-bottom: 20rpx;
+  border-radius: 28rpx;
+  padding: 30rpx 40rpx;
+  margin-bottom: 30rpx;
+  box-shadow: 0 4rpx 20rpx rgba(0, 0, 0, 0.05);
 }
 
 .form-title {
@@ -43,21 +50,26 @@
 
 .input {
   border: 1rpx solid #eee;
-  padding: 20rpx;
-  border-radius: 8rpx;
-  font-size: 28rpx;
+  padding: 0 24rpx;
+  border-radius: 12rpx;
+  font-size: 30rpx; /* Increased for legibility */
   width: 100%;
   box-sizing: border-box;
+  height: 100rpx; /* Explicit height */
+  line-height: 100rpx;
+  background-color: #f9f9f9;
 }
 
 .textarea {
   border: 1rpx solid #eee;
-  padding: 20rpx;
-  border-radius: 8rpx;
-  font-size: 28rpx;
+  padding: 24rpx;
+  border-radius: 12rpx;
+  font-size: 30rpx;
   width: 100%;
   box-sizing: border-box;
-  min-height: 160rpx;
+  min-height: 240rpx;
+  background-color: #f9f9f9;
+  line-height: 1.6;
 }
 
 .picker-value {
